<resources>
    <string name="app_name">漂浮載具</string>
    <string name="main_title">漂浮載具設定</string>
    <string name="main_subtitle">在這裡設定載具、漂浮視窗與桌面小工具。</string>
    <string name="vehicle_number_label">載具號碼</string>
    <string name="vehicle_number_hint">請輸入載具號碼</string>
    <string name="vehicle_number_tip">輸入 7 碼後，系統會自動加上前面的 /。</string>
    <string name="start_floating_button">啟動浮動視窗</string>
    <string name="request_overlay_button">授與懸浮權限並啟動</string>
    <string name="request_overlay_settings_button">前往權限設定</string>
    <string name="opacity_label">浮窗透明度</string>
    <string name="opacity_hint">調整後會立即套用。</string>
    <string name="opacity_value_100">100%</string>
    <string name="floating_settings_label">浮窗設定</string>
    <string name="startup_action_label">再次開啟 APP 時</string>
    <string name="startup_action_hint">第一次開啟 APP 會先顯示設定頁面；之後可以選擇要直接開啟漂浮載具，或繼續顯示設定頁面。</string>
    <string name="startup_action_open_settings">開啟設定頁面</string>
    <string name="startup_action_open_floating">開啟漂浮載具</string>
    <string name="close_action_label">關閉按鈕動作</string>
    <string name="close_action_hint">決定浮動視窗右上角按鈕要關閉浮窗或結束 App。</string>
    <string name="close_action_close_floating">關閉懸浮視窗</string>
    <string name="close_action_close_app">關閉整個 APP</string>
    <string name="vehicle_short_hint">不符合載具長度，還差 %1$d 碼。</string>
    <string name="vehicle_applied_hint">已儲存載具號碼</string>
    <string name="floating_title">載具條碼</string>
    <string name="floating_setting">開啟設定</string>
    <string name="floating_close">關閉浮動視窗</string>
    <string name="floating_barcode">載具條碼圖片</string>
    <string name="floating_vehicle_placeholder">載具號碼</string>
    <string name="overlay_permission_granted_hint">已取得重疊顯示權限</string>
    <string name="overlay_prompt_title">需要重疊顯示權限</string>
    <string name="overlay_prompt_message">要顯示浮動條碼與桌面小工具，請先允許「在其他應用程式上層顯示」。你可以先取消，或直接前往權限設定。</string>
    <string name="overlay_prompt_cancel">取消</string>
    <string name="overlay_prompt_dont_ask">不再提醒</string>
    <string name="overlay_prompt_go_settings">前往權限設定</string>
    <string name="reset_overlay_prompt_button">重設權限提醒</string>
    <string name="overlay_prompt_section_label">權限提醒</string>
    <string name="overlay_prompt_section_hint">如果你曾經選擇不再提醒，這裡可以重新開啟提示視窗。</string>
    <string name="widget_click_label">桌面小工具</string>
    <string name="widget_click_hint">設定顯示內容，以及點擊小工具後要執行的動作。</string>
    <string name="widget_click_open_app">開啟漂浮視窗</string>
    <string name="widget_click_open_selected_app">開啟指定的 App</string>
    <string name="widget_target_app_choose">選擇要開啟的 App</string>
    <string name="widget_target_app_selected">目前指定：%1$s</string>
    <string name="widget_target_app_dialog_title">選擇要開啟的 App</string>
    <string name="widget_target_app_search_hint">搜尋 App 名稱或套件名稱</string>
    <string name="widget_show_carrier_number">顯示載具號碼</string>
    <string name="widget_tap_action_label">點擊小工具時</string>
    <string name="widget_click_copy_carrier">複製載具號碼</string>
    <string name="widget_copy_success">已複製載具號碼到剪貼簿</string>
    <string name="widget_copy_empty">尚未設定載具號碼，無法複製</string>
    <string name="widget_feedback_channel_name">小工具回饋通知</string>
    <string name="widget_description">顯示手機條碼的小工具</string>
    <string name="widget_barcode_description">手機條碼圖片</string>
    <string name="carrier_not_configured_hint">尚未設定載具號碼</string>
    <string name="privacy_policy_label">隱私權政策</string>
    <string name="privacy_policy_hint">了解本 App 如何處理你的資料與權限。</string>
    <string name="privacy_policy_button">查看隱私權政策</string>
    <string name="privacy_policy_url">https://taiwanfloatingcarrier.rsps1008.ru/privacy-policy/</string>
</resources>
